# project-board

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.sh
examples/: demo.md
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/commands/: mod.rs
src/db/: migrations.rs  mod.rs
src/git/: mod.rs
src/github/: mod.rs
src/tui/: mod.rs
tests/: integration_test.rs
